COMMERCE-1309 compare checkbox invisibility bug fixed

--- a/commerce-theme-minium/commerce-theme-minium/static-version/src/styles/components/product-compare-checkbox.scss
+++ b/commerce-theme-minium/commerce-theme-minium/static-version/src/styles/components/product-compare-checkbox.scss
@@ -9,6 +9,17 @@
 	position: relative;
 	transition: background $micro-transition;
 
+	&__disabled {
+		opacity: .5;
+
+		.product-compare-checkbox__input {
+			&::before,
+			&::after {
+				display: none;
+			}
+		}
+	}
+
 	&__input {
 		position: relative;
 
